Update version of bootstrap

--- a/InfoTrackSeo/Views/Shared/_Layout.cshtml
+++ b/InfoTrackSeo/Views/Shared/_Layout.cshtml
@@ -8,13 +8,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                @Html.ActionLink("InfoTrack SEO", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-        </div>
-    </div>
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+        @Html.ActionLink("InfoTrack SEO", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
