--- a/InfoTrackSeo/Content/Site.css
+++ b/InfoTrackSeo/Content/Site.css
@@ -16,7 +16,27 @@
     white-space: normal;
 }
 
-.card-result {
-    min-width: 300px;
-    max-width: 340px;
+.custom-card-deck {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+
+.custom-card-deck .card-result {
+    width: 100%;
+    margin-right: 30px;
+}
+
+
+@media only screen and (min-width: 560px) {
+    .custom-card-deck .card-result {
+        width: 340px;
+    }
+}
+
+@media only screen and (min-width: 1040px) {
+    .custom-card-deck .card-result {
+        width: 340px;
+    }
 }
