--- a/InfoTrackSeo/Views/Home/Index.cshtml
+++ b/InfoTrackSeo/Views/Home/Index.cshtml
@@ -9,19 +9,19 @@
 
 @using (Html.BeginForm("Crawl", "Home", FormMethod.Post, new { @class = "mt-5 mb-5", name = formName, id = formName }))
 {
-    @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Uri)
-        @Html.TextBoxFor(m => m.Uri, new { @class = "form-control", @aria_describedby="uriHelpBlock" })
-        <small id="uriHelpBlock" class="form-text text-muted">By default searches for <code>http://</code> addresses, include <code>https://</code> to override.</small>
-        @Html.ValidationMessageFor(m => m.Uri, "", new {@class = "text-danger"})
+        @Html.TextBoxFor(m => m.Uri, new { @class = "form-control", @aria_describedby = "uriHelpBlock" })
+        <small id="uriHelpBlock" class="form-text text-muted">By default searches for <code>https://</code> addresses, include <code>http://</code> to override.</small>
+        @Html.ValidationMessageFor(m => m.Uri, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Keyword)
-        @Html.TextBoxFor(m => m.Keyword, new { @class = "form-control", @aria_describedby="keywordHelpBlock", @required = "required" })
+        @Html.TextBoxFor(m => m.Keyword, new { @class = "form-control", @aria_describedby = "keywordHelpBlock", @required = "required" })
         <small id="keywordHelpBlock" class="form-text text-muted">The search term(s) you would like to use.</small>
-        @Html.ValidationMessageFor(m => m.Keyword, "", new {@class = "text-danger"})
+        @Html.ValidationMessageFor(m => m.Keyword, "", new { @class = "text-danger" })
     </div>
 
     <input type="submit" value="Submit" class="btn btn-primary btn-sm float-right" id="submitCrawlForm" />
@@ -29,7 +29,36 @@
 
 <h3>Results</h3>
 <small>Please note that rankings and number of occurrences do not include advertisements.</small>
-<section class="card-deck">
+<section class="custom-card-deck">
+    <div class="card bg-info text-white mb-3 card-result">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-3">
+                    <label class="font-weight-bold" for="Uri">URI</label>
+                </div>
+                <div class="col-9">
+                    <span id="Uri">@Html.DisplayFor(m => m.Uri)</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <label class="font-weight-bold" for="Keyword">Keyword</label>
+                </div>
+                <div class="col-9">
+                    <span id="Keyword">@Html.DisplayFor(m => m.Keyword)</span>
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <p class="card-text">@Html.DisplayFor(m => m.LinkCount) occurrence of specified URI:</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            @foreach (var location in Model.LinkLocations)
+            {
+                <li class="list-group-item bg-info">Rank No. @location</li>
+            }
+        </ul>
+    </div>
 </section>
 
 <!--Template for info cards-->
