--- a/InfoTrackSeo/Views/Shared/_Layout.cshtml
+++ b/InfoTrackSeo/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         </footer>
     </div>
 
-    <div class="toast" id="toast" role="alert" aria-live="assertive" aria-atomic="true" style="position: fixed; bottom: 10px; right: 10px;">
+    <div class="toast" id="toast" role="alert" aria-live="assertive" aria-atomic="true" style="position: fixed; top: 60px; right: 10px; z-index: 99;">
         <div class="toast-header">
             <strong class="mr-auto" id="toastHeader">
                 <!--custom header to go here-->
