--- a/InfoTrackSeo/Content/Site.css
+++ b/InfoTrackSeo/Content/Site.css
@@ -18,8 +18,17 @@
 
 .custom-card-deck {
     display: flex;
+    -moz-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    -o-flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
     flex-flow: row wrap;
+    -o-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
     justify-content: flex-start;
+    -ms-align-items: stretch;
+    -o-align-items: stretch;
+    -webkit-align-items: stretch;
     align-items: stretch;
 }
 
