--- a/InfoTrackSeo/Views/Home/Index.cshtml
+++ b/InfoTrackSeo/Views/Home/Index.cshtml
@@ -16,10 +16,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Keyword)
-        @Html.TextBoxFor(m => m.Keyword, new { @class = "form-control", aria_describedby = "keywordHelpBlock", required = "required" })
+        @Html.LabelFor(m => m.Keywords)
+        @Html.TextBoxFor(m => m.Keywords, new { @class = "form-control", aria_describedby = "keywordHelpBlock", required = "required" })
         <small id="keywordHelpBlock" class="form-text text-muted">The search term(s) you would like to use.</small>
-        @Html.ValidationMessageFor(m => m.Keyword, "", new { @class = "text-danger" })
+        @Html.ValidationMessageFor(m => m.Keywords, "", new { @class = "text-danger" })
     </div>
 
     <input type="submit" value="Submit" class="btn btn-primary btn-sm float-right" id="submitCrawlForm" />
@@ -28,35 +28,7 @@
 <h3>Results</h3>
 <small>Please note that rankings and number of occurrences do not include advertisements.</small>
 <section class="custom-card-deck">
-    <div class="card bg-info text-white mb-3 card-result">
-        <div class="card-header">
-            <div class="row">
-                <div class="col-3">
-                    <label class="font-weight-bold" for="uriDisplay">URI</label>
-                </div>
-                <div class="col-9">
-                    <span id="uriDisplay">@Html.DisplayFor(m => m.Uri)</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-3">
-                    <label class="font-weight-bold" for="keywordDisplay">Keyword</label>
-                </div>
-                <div class="col-9">
-                    <span id="keywordDisplay">@Html.DisplayFor(m => m.Keyword)</span>
-                </div>
-            </div>
-        </div>
-        <div class="card-body">
-            <p class="card-text">@Html.DisplayFor(m => m.LinkCount) occurrence of specified URI:</p>
-        </div>
-        <ul class="list-group list-group-flush">
-            @foreach (var location in Model.LinkLocations)
-            {
-                <li class="list-group-item bg-info">Rank No. @location</li>
-            }
-        </ul>
-    </div>
+    <!--Results go here-->
 </section>
 
 <!--Template for info cards-->
@@ -73,10 +45,10 @@
             </div>
             <div class="row">
                 <div class="col-3">
-                    <label class="font-weight-bold">Keyword</label>
+                    <label class="font-weight-bold">Keywords</label>
                 </div>
                 <div class="col-9">
-                    <span>${keyword}</span>
+                    <span>${keywords}</span>
                 </div>
             </div>
         </div>
